appId: com.apex.selflovebuild
---
- launchApp
- assertVisible: "Lumière"
- tapOn: "Sign In"
- assertVisible: "Email"
